--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.5.0",
     "expo": "~49.0.8",
-    "expo-font": "~11.4.0",
+    "expo-font": "^11.4.0",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.0",
     "expo-splash-screen": "~0.20.5",
@@ -26,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
@@ -36,6 +38,7 @@
     "@types/react": "~18.2.14",
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
+    "prettier": "3.0.3",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
